# LAP_Stat

./: Dockerfile  README.md  clone_data.py  pyproject.toml  stat_lap.py  streamlit.py  streamlit_app.py  utils.py
data/: grafana_events.pkl  performance.pkl  progress.pkl  reviewer.pkl  selections.pkl  stats.pkl  worker.pkl
