# pyproject.toml

[tool.poetry]
name = "lapstat"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
mitosheet = "*"
streamlit = "*"